--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 
 <body class="body">
     <header class="header">
-        <a href="" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
+        <a href="/goit-markup-hw-02/index.html" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
         <nav class="header-nav">
-            <ul>
-                <li>
+            <ul class="nav-list">
+                <li class="nav-list-item">
                     <a href="" class="header-link">Студія</a>
                 </li>
-                <li>
+                <li class="nav-list-item">
                     <a href="/goit-markup-hw-02/portfolio.html" class="header-link">Портфоліо</a>
                 </li>
-                <li>
+                <li class="nav-list-item">
                     <a href="" class="header-link">Контакти</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
+        <ul class="address-list-item">
+            <li class="address-list">
                 <a href="mailto:info@devstudio.com" class="header-link address-link-header">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="address-list-item">
                 <a href="tel:+380961111111" class="header-link address-link-header">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -42,7 +42,7 @@
                 <button type="button" class="section-btn">Замовити послугу</button>
         </section>
         <section class="features">
-            <h2 class="features-header">Наші особливості</h2>
+            <h2 class="header-invisible">Наші особливості</h2>
                 <ul class="features-list">
                     <li class="features-item">
                         <h3 class="features-item-header">Увага до деталей</h3>
@@ -65,15 +65,15 @@
         <section class="activity">
             <div>
                 <h2 class="activity-header">Чим ми займаємося</h2>
-                <ul>
-                    <li>
+                <ul class="activity-list">
+                    <li class="activity-list-item">
                         <img src="./images/1.jpg" alt="Людина пише код" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="activity-list-item">
                         <img src="./images/2.jpg" alt="Людина працює за комп'ютером і тримає телефон" width="370"
                             height="294">
                     </li>
-                    <li>
+                    <li class="activity-list-item">
                         <img src="./images/3.jpg" alt="Людина дивиться на планшеті спектр кольорів" width="370"
                             height="294">
                     </li>
@@ -111,14 +111,14 @@
     <footer class="footer">
         <a href="/goit-markup-hw-02/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
         <address class="address">
-            <ul>
-                <li>
+            <ul class="address-list">
+                <li class="address-list-item">
                     <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="footer-link">м. Київ, пр-т Лесі Украінки, 26</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a href="mailto:info@devstudio.com" class="footer-link address-link-footer">info@example.com</a>
                 </li>
-                <li>
+                <li class="address-list-item">
                     <a href="tel:+380961111111" class="footer-link address-link-footer">+38 099 111 11 11</a>
                 </li>
             </ul>
