--- a/portfolio.html
+++ b/portfolio.html
@@ -7,47 +7,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="css/styles.css" class="rel">
-    <link rel="preconnect" href="<https://fonts.gstatic.com>">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
+
 <body class="portfolio-body">
-    <header>
-        <a href="/goit-markup-hw-02/index.html">WebStudio</a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="">Студія</a>
+    <header class="header">
+        <a href="/goit-markup-hw-02/index.html" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
+        <nav class="header-nav">
+            <ul class="nav-list">
+                <li class="nav-list-item">
+                    <a href="" class="header-link">Студія</a>
                 </li>
-                <li>
-                    <a href="/goit-markup-hw-02/portfolio.html">Портфоліо</a>
+                <li class="nav-list-item">
+                    <a href="/goit-markup-hw-02/portfolio.html" class="header-link">Портфоліо</a>
                 </li>
-                <li>
-                    <a href="">Контакти</a>
+                <li class="nav-list-item">
+                    <a href="" class="header-link">Контакти</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="address-list">
+            <li class="address-list-item">
+                <a href="mailto:info@devstudio.com" class="header-link address-link-header">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="address-list-item">
+                <a href="tel:+380961111111" class="header-link address-link-header">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main>
-
-    </main>
-    <footer>
-        <a href="">WebStudio</a>
-        <address>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т
-                Лесі Украінки, 26</a>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@example.com</a>
+    <main class="main">
+        <section class="main-portfolio">
+            <ul class="portfolio-btn">
+                <li class="portfolio-btn-item">
+                    <button type="button" class="item-btn">Усі</button>
                 </li>
-                <li>
-                    <a href="tel:+380961111111">+38 099 111 11 11</a>
+                <li class="portfolio-btn-item">
+                    <button type="button" class="item-btn">Веб-сайти</button>
+                </li>
+                <li class="portfolio-btn-item">
+                    <button type="button" class="item-btn">Додатки</button>
+                </li>
+                <li class="portfolio-btn-item">
+                    <button type="button" class="item-btn">Дизайн</button>
+                </li>
+                <li class="portfolio-btn-item">
+                    <button type="button" class="item-btn">Маркетинг</button>
+                </li>
+            </ul>
+        
+            <h1 class="header-invisible">Наші роботи</h1>
+            <ul class="portfolio-works">
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p1.jpg" alt="Ноутбук" width="370px" height="294px">
+                    <h2 class="portfolio-header">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p2.jpg" alt="Баскетболісти" width="370px" height="294px">
+                    <h2 class="portfolio-header">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p3.jpg" alt="Логотип ресторана" width="370px" height="294px">
+                    <h2 class="portfolio-header">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Додаток</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p4.jpg" alt="Навушники" width="370px" height="294px">
+                    <h2 class="portfolio-header">Проєкт Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p5.jpg" alt="Коробки" width="370px" height="294px">
+                    <h2 class="portfolio-header">Проєкт Boxes</h2>
+                    <p class="portfolio-text">Додаток</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p6.jpg" alt="Монітор" width="370px" height="294px">
+                    <h2 class="portfolio-header">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p7.jpg" alt="Журнал" width="370px" height="294px">
+                    <h2 class="portfolio-header">Видання Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p8.jpg" alt="Лейбочка" width="370px" height="294px">
+                    <h2 class="portfolio-header">Проєкт LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p>
+                </li>
+                <li class="portfolio-works-item">
+                    <img src="/goit-markup-hw-02/images/p9.jpg" alt="Людина працює за ноутбуком" width="370px" height="294px">
+                    <h2 class="portfolio-header">Growing Business</h2>
+                    <p class="portfolio-text">Додаток</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <a href="/goit-markup-hw-02/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
+        <address class="address">
+            <ul class="address-list">
+                <li class="address-list-item">
+                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="footer-link">м. Київ, пр-т Лесі Украінки, 26</a>
+                </li>
+                <li class="address-list-item">
+                    <a href="mailto:info@devstudio.com" class="footer-link address-link-footer">info@example.com</a>
+                </li>
+                <li class="address-list-item">
+                    <a href="tel:+380961111111" class="footer-link address-link-footer">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
