--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a href="" class="header-link">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/goit-markup-hw-02/portfolio.html" class="header-link">Портфоліо</a>
+                    <a href="/goit-markup-hw-02/portfolio.html" class="header-link active-link">Портфоліо</a>
                 </li>
                 <li class="nav-list-item">
                     <a href="" class="header-link">Контакти</a>
@@ -40,7 +40,7 @@
         <section class="main-portfolio">
             <ul class="portfolio-btn">
                 <li class="portfolio-btn-item">
-                    <button type="button" class="item-btn">Усі</button>
+                    <button type="button" class="item-btn active-btn">Усі</button>
                 </li>
                 <li class="portfolio-btn-item">
                     <button type="button" class="item-btn">Веб-сайти</button>
