--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="" class="header-link">Студія</a>
+                    <a href="/goit-markup-hw-02/index.html" class="header-link active-link">Студія</a>
                 </li>
                 <li class="nav-list-item">
                     <a href="/goit-markup-hw-02/portfolio.html" class="header-link">Портфоліо</a>
