--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="" class="header-link">Студія</a>
+                    <a href="/goit-markup-hw-02/index.html" class="header-link">Студія</a>
                 </li>
                 <li class="nav-list-item">
                     <a href="/goit-markup-hw-02/portfolio.html" class="header-link active-link">Портфоліо</a>
@@ -59,47 +59,47 @@
             <h1 class="header-invisible">Наші роботи</h1>
             <ul class="portfolio-works">
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p1.jpg" alt="Ноутбук" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p1.jpg" alt="Ноутбук" width="370" height="294">
                     <h2 class="portfolio-header">Технокряк</h2>
                     <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p2.jpg" alt="Баскетболісти" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p2.jpg" alt="Баскетболісти" width="370" height="294">
                     <h2 class="portfolio-header">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p3.jpg" alt="Логотип ресторана" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p3.jpg" alt="Логотип ресторана" width="370" height="294">
                     <h2 class="portfolio-header">Ресторан Seafood</h2>
                     <p class="portfolio-text">Додаток</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p4.jpg" alt="Навушники" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p4.jpg" alt="Навушники" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт Prime</h2>
                     <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p5.jpg" alt="Коробки" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p5.jpg" alt="Коробки" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт Boxes</h2>
                     <p class="portfolio-text">Додаток</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p6.jpg" alt="Монітор" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p6.jpg" alt="Монітор" width="370" height="294">
                     <h2 class="portfolio-header">Inspiration has no Borders</h2>
                     <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p7.jpg" alt="Журнал" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p7.jpg" alt="Журнал" width="370" height="294">
                     <h2 class="portfolio-header">Видання Limited Edition</h2>
                     <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p8.jpg" alt="Лейбочка" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p8.jpg" alt="Лейбочка" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт LAB</h2>
                     <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p9.jpg" alt="Людина працює за ноутбуком" width="370px" height="294px">
+                    <img src="/goit-markup-hw-02/images/p9.jpg" alt="Людина працює за ноутбуком" width="370" height="294">
                     <h2 class="portfolio-header">Growing Business</h2>
                     <p class="portfolio-text">Додаток</p>
                 </li>
@@ -123,3 +123,4 @@
         </address>
     </footer>
 </body>
+</html>
