--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="css/styles.css" class="rel">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" class="rel">
 </head>
 
 <body class="body">
     <header class="header">
-        <a href="/goit-markup-hw-02/index.html" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
+        <a href="/index.html" class="logo"><span class="header-logo">Web</span>Studio</a>
         <nav class="header-nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="/goit-markup-hw-02/index.html" class="header-link active-link">Студія</a>
+                    <a href="./index.html" class="header-link active-link">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/goit-markup-hw-02/portfolio.html" class="header-link">Портфоліо</a>
+                    <a href="./portfolio.html" class="header-link">Портфоліо</a>
                 </li>
                 <li class="nav-list-item">
                     <a href="" class="header-link">Контакти</a>
@@ -109,7 +109,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="/goit-markup-hw-02/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
+        <a href="/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
         <address class="address">
             <ul class="address-list">
                 <li class="address-list-item">
