--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="css/styles.css" class="rel">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" class="rel">
 </head>
 
 <body class="portfolio-body">
     <header class="header">
-        <a href="/goit-markup-hw-02/index.html" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
+        <a href="/index.html" class="header-link logo"><span class="header-logo">Web</span>Studio</a>
         <nav class="header-nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="/goit-markup-hw-02/index.html" class="header-link">Студія</a>
+                    <a href="./index.html" class="header-link">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="/goit-markup-hw-02/portfolio.html" class="header-link active-link">Портфоліо</a>
+                    <a href="./portfolio.html" class="header-link active-link">Портфоліо</a>
                 </li>
                 <li class="nav-list-item">
                     <a href="" class="header-link">Контакти</a>
@@ -38,6 +38,7 @@
     </header>
     <main class="main">
         <section class="main-portfolio">
+            <h1 class="header-invisible">Наші роботи</h1>
             <ul class="portfolio-btn">
                 <li class="portfolio-btn-item">
                     <button type="button" class="item-btn active-btn">Усі</button>
@@ -55,59 +56,76 @@
                     <button type="button" class="item-btn">Маркетинг</button>
                 </li>
             </ul>
-        
-            <h1 class="header-invisible">Наші роботи</h1>
+
             <ul class="portfolio-works">
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p1.jpg" alt="Ноутбук" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p1.jpg" alt="Ноутбук" width="370" height="294">
                     <h2 class="portfolio-header">Технокряк</h2>
                     <p class="portfolio-text">Веб-сайт</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p2.jpg" alt="Баскетболісти" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p2.jpg" alt="Баскетболісти" width="370" height="294">
                     <h2 class="portfolio-header">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-text">Дизайн</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p3.jpg" alt="Логотип ресторана" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p3.jpg" alt="Логотип ресторана" width="370" height="294">
                     <h2 class="portfolio-header">Ресторан Seafood</h2>
                     <p class="portfolio-text">Додаток</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p4.jpg" alt="Навушники" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p4.jpg" alt="Навушники" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт Prime</h2>
                     <p class="portfolio-text">Маркетинг</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p5.jpg" alt="Коробки" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p5.jpg" alt="Коробки" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт Boxes</h2>
                     <p class="portfolio-text">Додаток</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p6.jpg" alt="Монітор" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p6.jpg" alt="Монітор" width="370" height="294">
                     <h2 class="portfolio-header">Inspiration has no Borders</h2>
                     <p class="portfolio-text">Веб-сайт</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p7.jpg" alt="Журнал" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p7.jpg" alt="Журнал" width="370" height="294">
                     <h2 class="portfolio-header">Видання Limited Edition</h2>
                     <p class="portfolio-text">Дизайн</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p8.jpg" alt="Лейбочка" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p8.jpg" alt="Лейбочка" width="370" height="294">
                     <h2 class="portfolio-header">Проєкт LAB</h2>
                     <p class="portfolio-text">Маркетинг</p>
+                    </a>
                 </li>
                 <li class="portfolio-works-item">
-                    <img src="/goit-markup-hw-02/images/p9.jpg" alt="Людина працює за ноутбуком" width="370" height="294">
+                    <a href="" class="portfolio-works-link">
+                    <img src="/images/p9.jpg" alt="Людина працює за ноутбуком" width="370" height="294">
                     <h2 class="portfolio-header">Growing Business</h2>
                     <p class="portfolio-text">Додаток</p>
+                    </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/goit-markup-hw-02/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
+        <a href="/index.html" class="logo footer-link-logo"><span class="footer-logo">Web</span>Studio</a>
         <address class="address">
             <ul class="address-list">
                 <li class="address-list-item">
